@@ -1,3 +1,9 @@
+2004-10-08 Hasso Tepper <hasso at quagga.net>
+
+	* command.c, command.h: Make argument of cmd_make_strvec function
+	  const.
+	* command.c: Make hostname commands usable in vtysh again.
+
 2004-10-07 Hasso Tepper <hasso at quagga.net>
 
 	* command.c, pid_output.c, print_version.c, vty.c, vty.h: Make more
